--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main {
+    /* min-height: 83vmin; */
+    padding-bottom: 69px;
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 80px!important;
+}
